# cocoa

./: .bumpversion.cfg  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: bump.workflow.yml  bumpversion.workflow.yml  error.badges.yml  increment.workflow.yml  main.workflow.yml  publish-old.workflow.yml  publish.workflow.yml
src/cocoa/: constants.py  evaluate_repo.py  git.py  linting.py  notebooks.py  repo.py  repo_checks.py  spring2024.py  utils.py
